.kubernetes/local/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-py-ml-gateway
  namespace: test-a
  labels:
    app: *app-name
spec:
  type: ClusterIP
  ports:
  - port: 5010
    targetPort: 5010
    protocol: TCP
    name: http
  selector:
    app: py-ml-gateway
