.kubernetes/local/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-py-ml-gateway
  namespace: test-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/default-backend: "svc-py-ml-gateway"
spec:
  ingressClassName: nginx
  rules:
    - host: py-ml-gateway.domain.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-py-ml-gateway
              port:
                number: 5010
